--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="who">
       <h2>Who We Are</h2>
-      <h3>We do not exist. And if we did, we'd never make any money. We are but a figment of a web developer's imagination - a web developer with little to no understanding of business.</h3>
+      <h3>We do not exist.. And if we did, we'd never make any money. We are but a figment of a web developer's imagination - a web developer with little to no understanding of business.</h3>
     </section>
     <section class="products">
       <h2>Our Products</h2>
