Responsive design finished

--- a/index.html
+++ b/index.html
@@ -63,27 +63,31 @@
     <section class="team">
       <h2 id="team">Meet Our Team</h2>
       <div class="team-box">
-        <div class="person">
-          <h3>Homer Simpson</h3>
-          <h4>C.E.O.</h4>
-          <img class="homer" src="images/person.jpeg">
+        <div class="teamA subteam">
+          <div class="person">
+            <h3>Homer Simpson</h3>
+            <h4>C.E.O.</h4>
+            <img class="homer" src="images/person.jpeg">
+          </div>
+          <div class="person">
+            <h3>Sarah Connor</h3>
+            <h4>Sales</h4>
+            <img src="images/sarah.jpeg">
+          </div>
         </div>
-        <div class="person">
-          <h3>Sarah Connor</h3>
-          <h4>Sales</h4>
-          <img src="images/sarah.jpeg">
+        <div class="teamB subteam">
+          <div class="person">
+            <h3>Darth Vader</h3>
+            <h4>HR</h4>
+            <img src="images/darth.jpeg">
+          </div>
+          <div class="person">
+            <h3>Hermione Granger</h3>
+            <h4>Wizard</h4>
+            <img class="herm" src="images/wizard.jpeg">
+          </div>
         </div>
-        <div class="person">
-          <h3>Darth Vader</h3>
-          <h4>HR</h4>
-          <img src="images/darth.jpeg">
-        </div>
-        <div class="person">
-          <h3>Hermione Granger</h3>
-          <h4>Wizard</h4>
-          <img class="herm" src="images/wizard.jpeg">
-        </div>
-    </div>
+      </div>
     </section>
   </body>
 </html>
